Fix: Separate input/output logic and improve string handling
- Renamed method to follow Java naming conventions (camelCase)
- Separated input/output logic for better code organization
- Replaced `trim().isEmpty()` with `isBlank()` for clarity
- Normalized input using `trim()` and `toLowerCase()` before comparison