@@ -7,10 +7,10 @@ public class PalindromeReview {
 		Scanner sc = new Scanner(System.in);
 		System.out.println("Enter a string to check if it is a palindrome: ");
         String str = sc.nextLine();
-		boolean result = PalindromeReview(str);
+		
         sc.close();
 		
-		if(result) {
+		if(isPalindromeReview(str)) {
 			System.out.println(str+" is a palindrome. ");
 		}else {
 			System.out.println(str+" is not a palindrome. ");
@@ -19,13 +19,16 @@ public class PalindromeReview {
 		
 	}
     
-	public static boolean PalindromeReview(String str) {
-		//1.null ? trimed ? empty? 2.boolean return, reusable code 3.case standardization 4.reverse character 5.compare it  
-		if(str==null || str.trim().isEmpty()) {
+	public static boolean isPalindromeReview(String str) {
+		//1.Check if the string is null or empty.
+        //2. Normalize the string by converting it to lowercase.
+        //3. Reverse the string using StringBuilder.
+        //4. Compare the original string with the reversed string.  
+		if(str==null || str.isBlank()) {
 			return false;
 		}
 		
-			str = str.toLowerCase();
+			str = str.trim().toLowerCase();
 			String reversed = new StringBuilder(str).reverse().toString();
 			return str.equals(reversed);
 			
